<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feed_title">Популярные мемы</string>
    <string name="search_hint">Поиск</string>
    <string name="load_error">Не удалось загрузить ленту\nОбновите экран или попробуйте позже.</string>
    <string name="nickname">LittleHallCat</string>
    <string name="create_photo">Сделать фото</string>
    <string name="from_gallery">Из галереи</string>
    <string name="create">Создать</string>
    <string name="meme_description_hint">Текст</string>
    <string name="meme_title_hint">Заголовок</string>
    <string name="about_app">О приложении</string>
    <string name="exit">Выход</string>
    <string name="exit_dialog_text">Действительно хотите выйти?</string>
    <string name="exitCAPS">ВЫЙТИ</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="search">Поиск</string>
</resources>